tests/ui/struct.stderr
error: c should sort before d
 --> tests/ui/struct.rs:6:5
  |
6 |     c: usize,
  |     ^
